# component-linking-demo

./: .gitmodules  Makefile  README.md  bar_impl.c  build-numpy.sh  dl.c  foo.c  test.wit
runner/: Cargo.toml
runner/src/: main.rs
